feat: add idle state component with localization for user prompts

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -42,7 +42,6 @@
   "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
   "error": "Fehler",
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
-  "verify": "Überprüfen",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "extracting-references": "Extrahiere Referenzen",
@@ -60,6 +59,8 @@
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
   "hr": "h",
+  "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
+  "idle-state-title": "Eingabe oder Überprüfung ausstehend",
   "insert-references": "Text mit Referenzen",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
@@ -71,6 +72,8 @@
   "metadata": "Metadaten",
   "min": "min",
   "no-input-provided": "Keine Eingabe bereitgestellt",
+  "no-references-found-text": "Es wurden keine Referenzen im Text gefunden. Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese Referenzen enthält",
+  "no-references-found-title": "Keine Referenzen gefunden",
   "no-results-found": "Keine Ergebnisse gefunden",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "note": "Hinweis",
@@ -111,6 +114,7 @@
   "valid-description": "Gültig",
   "verified": "Verifiziert",
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
+  "verify": "Überprüfen",
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
