--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -42,7 +42,6 @@
   "enter-references": "Please enter a text or import a PDF containing references to verify them",
   "error": "Error",
   "error-references-tooltip": "References that could not be verified due to a technical error",
-  "verify": "Verify",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "extracting-references": "Extracting References",
@@ -60,6 +59,8 @@
   "help": "Help",
   "help-description": "Get support and helpful resources",
   "hr": "hr",
+  "idle-state-text": "You have not entered any input yet or have not started the verification. Please enter text or upload a PDF file and click on 'Verify'",
+  "idle-state-title": "Input or verification pending",
   "insert-references": "Text containing references",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
@@ -71,6 +72,8 @@
   "metadata": "Metadata",
   "min": "min",
   "no-input-provided": "No Input Provided",
+  "no-references-found-text": "No references were found in the text. Please check your input and ensure it contains references",
+  "no-references-found-title": "No References Found",
   "no-results-found": "No Results Found",
   "no-valid-dois-were-found": "No DOIs found",
   "note": "Note",
@@ -111,6 +114,7 @@
   "valid-description": "Valid",
   "verified": "Verified",
   "verified-references-tooltip": "References that were successfully matched to a source",
+  "verify": "Verify",
   "view-demo": "View a demonstration of how to use the extension",
   "view-github": "View Project on GitHub",
   "visit-website": "Visit Website",
