feat: update verification status messages and improve metadata handling

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -41,6 +41,7 @@
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
   "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
   "error": "Fehler",
+  "error-reference": "Referenz konnte aufgrund eines technischen Fehlers nicht überprüft werden",
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
@@ -107,12 +108,14 @@
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
   "unregistered": "Nicht registriert",
   "unverified": "Nicht verifiziert",
+  "unverified-reference": "Referenz konnte keiner Quelle zugeordnet werden. Bitte überprüfen Sie die Referenz manuell.",
   "unverified-references-tooltip": "Referenzen, die keiner Quelle zugeordnet werden konnten",
   "upload-pdf": "PDF-Datei importieren",
   "usage": "Nutzung",
   "valid": "Gültig",
   "valid-description": "Gültig",
   "verified": "Verifiziert",
+  "verified-reference": "Referenz konnte erfolgreich einer Quelle zugeordnet werden",
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "verify": "Überprüfen",
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
