--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -41,6 +41,7 @@
   "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
   "enter-references": "Please enter a text or import a PDF containing references to verify them",
   "error": "Error",
+  "error-reference": "Reference could not be verified due to a technical error",
   "error-references-tooltip": "References that could not be verified due to a technical error",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
@@ -107,12 +108,14 @@
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
   "unregistered": "Unregistered",
   "unverified": "Unverified",
+  "unverified-reference": "Reference could not be matched to a source. Please verify the reference manually",
   "unverified-references-tooltip": "References that could not be matched to a source",
   "upload-pdf": "Import PDF",
   "usage": "Usage",
   "valid": "Valid",
   "valid-description": "Valid",
   "verified": "Verified",
+  "verified-reference": "Reference could be successfully matched to a source",
   "verified-references-tooltip": "References that were successfully matched to a source",
   "verify": "Verify",
   "view-demo": "View a demonstration of how to use the extension",
