feat: enhance state components with updated icons and text for better user feedback

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -10,6 +10,10 @@
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll",
   "ai-used": "DOIs mit KI extrahiert",
+  "analyzing-references": "Analysiere Referenzinhalte…",
+  "analyzing-references-description": "Es wird nach passenden Quellen gesucht und die Übereinstimmung mit deinen Referenzen überprüft. Je nach Anzahl der Referenzen kann dies einige Zeit dauern.",
+  "analyzing-text-content": "Analysiere Textinhalt…",
+  "analyzing-text-content-description": "Der eingegebene Text wird analysiert. Wir suchen und erkennen automatisch bibliografische Referenzen. Je nach Textlänge kann dies einige Zeit dauern.",
   "api-key-invalid": "Ungültig",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
@@ -22,6 +26,7 @@
   "auto-import-references-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "auto-references-check": "Automatisch Referenzen prüfen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
+  "checked": "überprüft",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
   "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
@@ -45,7 +50,7 @@
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
-  "extracting-references": "Extrahiere Referenzen",
+  "extracting-references": "Referenzanalyse läuft",
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
   "found": "Gefunden",
   "found-references-tooltip": "Alle im Text erkannten Referenzen",
@@ -62,6 +67,8 @@
   "hr": "h",
   "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
+  "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
+  "input-required": "Eingabe erforderlich",
   "insert-references": "Text mit Referenzen",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
@@ -73,8 +80,11 @@
   "metadata": "Metadaten",
   "min": "min",
   "no-input-provided": "Keine Eingabe bereitgestellt",
-  "no-references-found-text": "Es wurden keine Referenzen im Text gefunden. Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese Referenzen enthält",
-  "no-references-found-title": "Keine Referenzen gefunden",
+  "no-references-detected": "Keine Referenzen erkannt",
+  "no-references-found": "Noch keine Referenzen zum Überprüfen",
+  "no-references-found-text": "Bitte überprüfe den eingegebenen Text oder lade ein Dokument mit formatierten Referenzen hoch. Achte darauf, dass Literaturangaben vollständig und korrekt sind.",
+  "no-references-found-title": "Leider konnten keine Referenzen gefunden werden",
+  "no-references-to-check": "Noch keine Referenzen zum Überprüfen",
   "no-results-found": "Keine Ergebnisse gefunden",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "note": "Hinweis",
@@ -93,6 +103,7 @@
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
   "resets-in": "Wird zurückgesetzt in ca.",
   "search": "Suche",
+  "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
   "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen...",
   "search-on-web": "Im Web suchen",
