feat: update button text to 'verify-references' and add corresponding translations

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -129,6 +129,7 @@
   "verified-reference": "Referenz konnte erfolgreich einer Quelle zugeordnet werden",
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "verify": "Überprüfen",
+  "verify-references": "Quellenangaben überprüfen",
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
