refactor: update localization files to add new keys and improve existing translations

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -19,6 +19,7 @@
   "api-key-valid": "Gültig",
   "appearance": "Aussehen",
   "appearance-description": "Passe das Erscheinungsbild der Extension an",
+  "authors": "Autoren",
   "auto-check-references-description": "Referenzen werden automatisch extrahiert und geprüft, sobald Text eingefügt oder eine PDF importiert wird",
   "auto-check-references-info": "Die manuelle Prüfung über den Button bleibt weiterhin verfügbar",
   "auto-import-references": "Referenzen automatisch importieren",
@@ -26,6 +27,7 @@
   "auto-import-references-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "auto-references-check": "Automatisch Referenzen prüfen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
+  "check-references": "Referenzen prüfen",
   "checked": "überprüft",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
@@ -50,7 +52,7 @@
   "error-references-tooltip": "Referenzen, die aufgrund eines technischen Fehlers nicht überprüft werden konnten",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
-  "extracting-references": "Referenzanalyse läuft",
+  "extracting-references": "Extrahiere Referenzen...",
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
   "found": "Gefunden",
   "found-references-tooltip": "Alle im Text erkannten Referenzen",
@@ -69,9 +71,11 @@
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
   "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
   "input-required": "Eingabe erforderlich",
-  "insert-references": "Text mit Referenzen",
+  "insert-references": "Text mit Referenzen eingeben...",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
+  "issue": "Ausgabe",
+  "journal": "Zeitschrift",
   "language": "Sprache",
   "language-description": "Stelle die Sprache ein",
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
@@ -81,15 +85,18 @@
   "min": "min",
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "no-references-detected": "Keine Referenzen erkannt",
-  "no-references-found": "Noch keine Referenzen zum Überprüfen",
+  "no-references-found": "Keine Referenzen gefunden",
   "no-references-found-text": "Bitte überprüfe den eingegebenen Text oder lade ein Dokument mit formatierten Referenzen hoch. Achte darauf, dass Literaturangaben vollständig und korrekt sind.",
   "no-references-found-title": "Leider konnten keine Referenzen gefunden werden",
   "no-references-to-check": "Noch keine Referenzen zum Überprüfen",
   "no-results-found": "Keine Ergebnisse gefunden",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
+  "not-verified": "Nicht verifiziert",
   "note": "Hinweis",
   "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
   "open-source": "Quelle öffnen",
+  "original-text": "Originaltext",
+  "pages": "Seiten",
   "pdf-file": "PDF-Datei",
   "popup": "Popup",
   "recommended": "Empfohlen",
@@ -107,8 +114,10 @@
   "search-and-verify": "Suche und Überprüfung",
   "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen...",
   "search-on-web": "Im Web suchen",
+  "search-references": "Referenzen suchen",
   "sec": "s",
   "side-panel": "Seitenleiste",
+  "source": "Quelle",
   "source-code": "Quellcode",
   "sth-went-wrong": "Etwas ist schief gelaufen",
   "system": "System",
@@ -126,6 +135,7 @@
   "valid": "Gültig",
   "valid-description": "Gültig",
   "verified": "Verifiziert",
+  "verified-against": "Verifiziert gegen",
   "verified-reference": "Referenz konnte erfolgreich einer Quelle zugeordnet werden",
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "verify": "Überprüfen",
@@ -133,5 +143,7 @@
   "view-demo": "Eine Demonstration zur Verwendung der Erweiterung ansehen",
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
-  "website": "Webseite"
+  "volume": "Band",
+  "website": "Webseite",
+  "year": "Jahr"
 }
