--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -19,6 +19,7 @@
   "api-key-valid": "Valid",
   "appearance": "Appearance",
   "appearance-description": "Adjust the appearance of the extension",
+  "authors": "Authors",
   "auto-check-references-description": "References are automatically extracted and checked as soon as text is pasted or a PDF is imported",
   "auto-check-references-info": "Manual checking via the button remains available",
   "auto-import-references": "Auto-import References",
@@ -26,6 +27,7 @@
   "auto-import-references-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
   "auto-references-check": "Auto-check References",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
+  "check-references": "Check References",
   "checked": "checked",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
@@ -50,7 +52,7 @@
   "error-references-tooltip": "References that could not be verified due to a technical error",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
-  "extracting-references": "Reference analysis in progress",
+  "extracting-references": "Extracting References...",
   "extracting-references-description": "Extracting References from the Text...",
   "found": "Found",
   "found-references-tooltip": "All references recognized in the text",
@@ -69,9 +71,11 @@
   "idle-state-title": "Input or verification pending",
   "import-pdf-or-add-references": "Upload a PDF file or paste references into the text field to start verification.",
   "input-required": "Input required",
-  "insert-references": "Text containing references",
+  "insert-references": "Insert text with references...",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
+  "issue": "Issue",
+  "journal": "Journal",
   "language": "Language",
   "language-description": "Set your language",
   "language-option-description": "Select the language of the extension",
@@ -81,15 +85,18 @@
   "min": "min",
   "no-input-provided": "No Input Provided",
   "no-references-detected": "No references detected",
-  "no-references-found": "",
+  "no-references-found": "No references found",
   "no-references-found-text": "Please check the entered text or upload a document with properly formatted references. Make sure that citation details are complete and correct.",
   "no-references-found-title": "Unfortunately, no references could be found",
   "no-references-to-check": "No references to check yet",
   "no-results-found": "No Results Found",
   "no-valid-dois-were-found": "No DOIs found",
+  "not-verified": "Not verified",
   "note": "Note",
   "o3-mini-description": "Fast, flexible, intelligent reasoning model",
   "open-source": "Open Source",
+  "original-text": "Original text",
+  "pages": "Pages",
   "pdf-file": "PDF File",
   "popup": "Popup",
   "recommended": "Recommended",
@@ -107,8 +114,10 @@
   "search-and-verify": "Search and Verify",
   "search-and-verify-description": "Searching for matching sources and verifying references...",
   "search-on-web": "Search on the Web",
+  "search-references": "Search references",
   "sec": "sec",
   "side-panel": "Side Panel",
+  "source": "Source",
   "source-code": "Source Code",
   "sth-went-wrong": "Something went wrong",
   "system": "System",
@@ -126,6 +135,7 @@
   "valid": "Valid",
   "valid-description": "Valid",
   "verified": "Verified",
+  "verified-against": "Verified against",
   "verified-reference": "Reference could be successfully matched to a source",
   "verified-references-tooltip": "References that were successfully matched to a source",
   "verify": "Verify",
@@ -133,5 +143,7 @@
   "view-demo": "View a demonstration of how to use the extension",
   "view-github": "View Project on GitHub",
   "visit-website": "Visit Website",
-  "website": "Website"
+  "volume": "Volume",
+  "website": "Website",
+  "year": "Year"
 }
