feat: implement reference details view and enhance localization

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -26,13 +26,15 @@
   "auto-import-references-description": "Referenzen werden auf der geöffneten Seite erkannt und automatisch in die Erweiterung importiert",
   "auto-import-references-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "auto-references-check": "Automatisch Referenzen prüfen",
+  "browse": "Durchsuchen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "check-references": "Referenzen prüfen",
   "checked": "überprüft",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
   "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
-  "copy-doi": "Kopieren",
+  "copy": "Kopieren",
+  "copy-reference": "Referenz kopieren",
   "create-one-here": "hier erstellen",
   "dark": "Dunkel",
   "display": "Darstellung",
@@ -83,13 +85,16 @@
   "light": "Hell",
   "metadata": "Metadaten",
   "min": "min",
+  "no-additional-error-info": "Keine zusätzlichen Fehlerinformationen verfügbar",
   "no-input-provided": "Keine Eingabe bereitgestellt",
+  "no-matching-source-found": "Keine passende Quelle gefunden oder Überprüfung fehlgeschlagen",
   "no-references-detected": "Keine Referenzen erkannt",
   "no-references-found": "Keine Referenzen gefunden",
   "no-references-found-text": "Bitte überprüfe den eingegebenen Text oder lade ein Dokument mit formatierten Referenzen hoch. Achte darauf, dass Literaturangaben vollständig und korrekt sind.",
   "no-references-found-title": "Leider konnten keine Referenzen gefunden werden",
   "no-references-to-check": "Noch keine Referenzen zum Überprüfen",
   "no-results-found": "Keine Ergebnisse gefunden",
+  "no-title": "Kein Titel",
   "no-valid-dois-were-found": "Keine DOIs gefunden",
   "not-verified": "Nicht verifiziert",
   "note": "Hinweis",
@@ -98,6 +103,7 @@
   "original-text": "Originaltext",
   "pages": "Seiten",
   "pdf-file": "PDF-Datei",
+  "pending-reference": "Ausstehende Überprüfung. Bitte warten Sie, bis die Überprüfung abgeschlossen ist.",
   "popup": "Popup",
   "recommended": "Empfohlen",
   "registered": "Registriert",
@@ -113,7 +119,8 @@
   "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
   "search-and-verify-description": "Suche nach passenden Quellen und Prüfung der Referenzen...",
-  "search-on-web": "Im Web suchen",
+  "search-on-web": "Im Internet nach dieser Referenz suchen",
+  "search-on-web-tooltip": "Im Internet nach dieser Referenz suchen",
   "search-references": "Referenzen suchen",
   "sec": "s",
   "side-panel": "Seitenleiste",
