--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -26,13 +26,15 @@
   "auto-import-references-description": "References are detected on the open page and automatically imported in the extension",
   "auto-import-references-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
   "auto-references-check": "Auto-check References",
+  "browse": "Browse",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "check-references": "Check References",
   "checked": "checked",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
   "contact-email": "For questions or issues, you can reach us via email",
-  "copy-doi": "Copy",
+  "copy": "Copy",
+  "copy-reference": "Copy reference",
   "create-one-here": "create one here",
   "dark": "Dark",
   "display": "Display",
@@ -83,13 +85,16 @@
   "light": "Light",
   "metadata": "Metadata",
   "min": "min",
+  "no-additional-error-info": "No additional error information available",
   "no-input-provided": "No Input Provided",
+  "no-matching-source-found": " No matching source found or verification failed",
   "no-references-detected": "No references detected",
   "no-references-found": "No references found",
   "no-references-found-text": "Please check the entered text or upload a document with properly formatted references. Make sure that citation details are complete and correct.",
   "no-references-found-title": "Unfortunately, no references could be found",
   "no-references-to-check": "No references to check yet",
   "no-results-found": "No Results Found",
+  "no-title": "No title",
   "no-valid-dois-were-found": "No DOIs found",
   "not-verified": "Not verified",
   "note": "Note",
@@ -98,6 +103,7 @@
   "original-text": "Original text",
   "pages": "Pages",
   "pdf-file": "PDF File",
+  "pending-reference": "Pending verification. Please wait for the verification to complete.",
   "popup": "Popup",
   "recommended": "Recommended",
   "registered": "Registered",
@@ -113,7 +119,8 @@
   "search-and-verification": "Search and verification",
   "search-and-verify": "Search and Verify",
   "search-and-verify-description": "Searching for matching sources and verifying references...",
-  "search-on-web": "Search on the Web",
+  "search-on-web": "Search the internet for this reference",
+  "search-on-web-tooltip": "",
   "search-references": "Search references",
   "sec": "sec",
   "side-panel": "Side Panel",
