feat: Enhance database verification service and UI components

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -10,6 +10,7 @@
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-used": "DOIs extracted with AI",
+  "all-found-sources": "All Found Sources",
   "analyzing-references": "Analyzing reference content…",
   "analyzing-references-description": "We're searching for matching sources and checking them against your references. This may take some time depending on the number of references.",
   "analyzing-text-content": "Analyzing text content…",
@@ -20,12 +21,15 @@
   "appearance": "Appearance",
   "appearance-description": "Adjust the appearance of the extension",
   "authors": "Authors",
+  "authors-match": "Authors Match",
   "auto-check-references-description": "References are automatically extracted and checked as soon as text is pasted or a PDF is imported",
   "auto-check-references-info": "Manual checking via the button remains available",
   "auto-import-references": "Auto-import References",
   "auto-import-references-description": "References are detected on the open page and automatically imported in the extension",
   "auto-import-references-info": "This does not apply to downloaded PDFs opened in the browser; those must be imported manually",
   "auto-references-check": "Auto-check References",
+  "best-match": "Best Match",
+  "best-match-from": "",
   "browse": "Browse",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "check-references": "Check References",
@@ -37,12 +41,14 @@
   "copy-reference": "Copy reference",
   "create-one-here": "create one here",
   "dark": "Dark",
+  "details": "",
   "display": "Display",
   "display-mode": "Display Mode",
   "display-mode-description": "Select the display mode of the extension",
   "doi-copied": "Copied",
   "doi-incorrect": "The DOI is incorrect in your source",
   "doi-incorrect-extracted": "The DOI was extracted incorrectly",
+  "doi-match": "DOI Match",
   "doi-not-activated": "The DOI has not been activated yet",
   "doi-not-found": "The DOI was not found. Possible reasons are:",
   "download-report-pdf": "Download report as PDF",
@@ -68,6 +74,7 @@
   "gpt-4o-description": "Fast, intelligent, flexible GPT model",
   "help": "Help",
   "help-description": "Get support and helpful resources",
+  "hide-details": "Hide details",
   "hr": "hr",
   "idle-state-text": "You have not entered any input yet or have not started the verification. Please enter text or upload a PDF file and click on 'Verify'",
   "idle-state-title": "Input or verification pending",
@@ -78,11 +85,19 @@
   "invalid-description": "Invalid. Please check the DOI for accuracy",
   "issue": "Issue",
   "journal": "Journal",
+  "journal-match": "Journal Match",
   "language": "Language",
   "language-description": "Set your language",
   "language-option-description": "Select the language of the extension",
   "learn-more": "Learn more",
   "light": "Light",
+  "match-analysis": "",
+  "match-details": "Match Details",
+  "match-score": "Match Score",
+  "match-status-match": "",
+  "match-status-missing": "",
+  "match-status-no_match": "",
+  "match-status-partial": "",
   "metadata": "Metadata",
   "min": "min",
   "no-additional-error-info": "No additional error information available",
@@ -101,11 +116,13 @@
   "o3-mini-description": "Fast, flexible, intelligent reasoning model",
   "open-source": "Open Source",
   "original-text": "Original text",
+  "overall-match": "Overall Match",
   "pages": "Pages",
   "pdf-file": "PDF File",
   "pending-reference": "Pending verification. Please wait for the verification to complete.",
   "popup": "Popup",
   "recommended": "Recommended",
+  "reference-metadata": "Reference Metadata",
   "registered": "Registered",
   "reload-page-auto-import": "Reload the page to automatically find and import references",
   "remove-file-to-enable-text-input": "Remove file to enable text input",
@@ -123,15 +140,19 @@
   "search-on-web-tooltip": "",
   "search-references": "Search references",
   "sec": "sec",
+  "show-details": "Show Details",
   "side-panel": "Side Panel",
   "source": "Source",
   "source-code": "Source Code",
+  "source-metadata": "Source Metadata",
+  "sources-found": "",
   "sth-went-wrong": "Something went wrong",
   "system": "System",
   "test-api-key": "Test API Key",
   "theme": "Theme",
   "theme-option-description": "Select the theme of the extension",
-  "title": "title",
+  "title": "Title",
+  "title-match": "Title Match",
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
   "unregistered": "Unregistered",
@@ -142,6 +163,7 @@
   "usage": "Usage",
   "valid": "Valid",
   "valid-description": "Valid",
+  "verification-details": "",
   "verified": "Verified",
   "verified-against": "Verified against",
   "verified-reference": "Reference could be successfully matched to a source",
@@ -153,5 +175,6 @@
   "visit-website": "Visit Website",
   "volume": "Volume",
   "website": "Website",
-  "year": "Year"
+  "year": "Year",
+  "year-match": "Year Match"
 }
