--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -10,6 +10,7 @@
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll",
   "ai-used": "DOIs mit KI extrahiert",
+  "all-found-sources": "Alle gefundenen Quellen",
   "analyzing-references": "Analysiere Referenzinhalte…",
   "analyzing-references-description": "Es wird nach passenden Quellen gesucht und die Übereinstimmung mit deinen Referenzen überprüft. Je nach Anzahl der Referenzen kann dies einige Zeit dauern.",
   "analyzing-text-content": "Analysiere Textinhalt…",
@@ -20,12 +21,15 @@
   "appearance": "Aussehen",
   "appearance-description": "Passe das Erscheinungsbild der Extension an",
   "authors": "Autoren",
+  "authors-match": "Autoren-Übereinstimmung",
   "auto-check-references-description": "Referenzen werden automatisch extrahiert und geprüft, sobald Text eingefügt oder eine PDF importiert wird",
   "auto-check-references-info": "Die manuelle Prüfung über den Button bleibt weiterhin verfügbar",
   "auto-import-references": "Referenzen automatisch importieren",
   "auto-import-references-description": "Referenzen werden auf der geöffneten Seite erkannt und automatisch in die Erweiterung importiert",
   "auto-import-references-info": "Dies gilt nicht für im Browser geöffnete heruntergeladene PDFs; diese müssen manuell importiert werden",
   "auto-references-check": "Automatisch Referenzen prüfen",
+  "best-match": "Beste Übereinstimmung",
+  "best-match-from": "Beste Übereinstimmung von",
   "browse": "Durchsuchen",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "check-references": "Referenzen prüfen",
@@ -37,12 +41,14 @@
   "copy-reference": "Referenz kopieren",
   "create-one-here": "hier erstellen",
   "dark": "Dunkel",
+  "details": "Details",
   "display": "Darstellung",
   "display-mode": "Anzeigemodus",
   "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
   "doi-copied": "Kopiert",
   "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
   "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
+  "doi-match": "DOI-Übereinstimmung",
   "doi-not-activated": "Der DOI wurde noch nicht aktiviert",
   "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
   "download-report-pdf": "Bericht als PDF herunterladen",
@@ -68,6 +74,7 @@
   "gpt-4o-description": "Schnelles, intelligentes, flexibles GPT-Modell",
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
+  "hide-details": "Details ausblenden",
   "hr": "h",
   "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
@@ -78,11 +85,19 @@
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "issue": "Ausgabe",
   "journal": "Zeitschrift",
+  "journal-match": "Journal-Übereinstimmung",
   "language": "Sprache",
   "language-description": "Stelle die Sprache ein",
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "learn-more": "Mehr erfahren",
   "light": "Hell",
+  "match-analysis": "Übereinstimmungsanalyse",
+  "match-details": "Übereinstimmungsdetails",
+  "match-score": "Übereinstimmungswert",
+  "match-status-match": "Übereinstimmung",
+  "match-status-missing": "Fehlend",
+  "match-status-no_match": "Keine Übereinstimmung",
+  "match-status-partial": "Teilweise",
   "metadata": "Metadaten",
   "min": "min",
   "no-additional-error-info": "Keine zusätzlichen Fehlerinformationen verfügbar",
@@ -101,11 +116,13 @@
   "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
   "open-source": "Quelle öffnen",
   "original-text": "Originaltext",
+  "overall-match": "Gesamtübereinstimmung",
   "pages": "Seiten",
   "pdf-file": "PDF-Datei",
   "pending-reference": "Ausstehende Überprüfung. Bitte warten Sie, bis die Überprüfung abgeschlossen ist.",
   "popup": "Popup",
   "recommended": "Empfohlen",
+  "reference-metadata": "Referenz-Metadaten",
   "registered": "Registriert",
   "reload-page-auto-import": "Seite neu laden, um Referenzen automatisch zu finden und zu importieren",
   "remove-file-to-enable-text-input": "Datei entfernen, um die Texteingabe zu aktivieren",
@@ -123,15 +140,19 @@
   "search-on-web-tooltip": "Im Internet nach dieser Referenz suchen",
   "search-references": "Referenzen suchen",
   "sec": "s",
+  "show-details": "Details anzeigen",
   "side-panel": "Seitenleiste",
   "source": "Quelle",
   "source-code": "Quellcode",
+  "source-metadata": "Quellen-Metadaten",
+  "sources-found": "Quellen gefunden",
   "sth-went-wrong": "Etwas ist schief gelaufen",
   "system": "System",
   "test-api-key": "API-Schlüssel testen",
   "theme": "Design",
   "theme-option-description": "Wählen Sie das Design der Erweiterung",
   "title": "Titel",
+  "title-match": "Titel-Übereinstimmung",
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
   "unregistered": "Nicht registriert",
@@ -142,6 +163,7 @@
   "usage": "Nutzung",
   "valid": "Gültig",
   "valid-description": "Gültig",
+  "verification-details": "Verifikationsdetails",
   "verified": "Verifiziert",
   "verified-against": "Verifiziert gegen",
   "verified-reference": "Referenz konnte erfolgreich einer Quelle zugeordnet werden",
@@ -153,5 +175,6 @@
   "visit-website": "Webseite besuchen",
   "volume": "Band",
   "website": "Webseite",
-  "year": "Jahr"
+  "year": "Jahr",
+  "year-match": "Jahr-Übereinstimmung"
 }
