feat: enhance reference handling by adding support for various identifiers (DOI, arXiv ID, PMID, ISBN, ISSN) and improving metadata display in the report components

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "about": "About",
   "about-description": "Learn more about the extension",
+  "advisor": "Advisor",
   "ai": "AI",
   "ai-description": "Enable and configure AI-powered functionality",
   "ai-extraction": "AI Extraction",
@@ -20,6 +21,9 @@
   "api-key-valid": "Valid",
   "appearance": "Appearance",
   "appearance-description": "Adjust the appearance of the extension",
+  "approximate-date": "Approximate Date",
+  "approximate-date-indicator": "ca.",
+  "article-number": "Article Number",
   "authors": "Authors",
   "authors-match": "Authors Match",
   "auto-check-references-description": "References are automatically extracted and checked as soon as text is pasted or a PDF is imported",
@@ -31,20 +35,30 @@
   "best-match": "Best Match",
   "best-match-from": "",
   "browse": "Browse",
+  "chapter-title": "Chapter Title",
   "check-dois": "Please check your input and ensure it contains DOIs and is correctly formatted to improve search results",
   "check-references": "Check References",
   "checked": "checked",
+  "conference": "Conference",
   "connection-problem": "There might be a problem with your connection. Please check your internet connection.",
   "contact": "Contact",
   "contact-email": "For questions or issues, you can reach us via email",
+  "containerTitle": "Container Title",
+  "containerTitle-match": "Container Title Match",
+  "contributors": "Contributors",
   "copy": "Copy",
   "copy-reference": "Copy reference",
   "create-one-here": "create one here",
   "dark": "Dark",
+  "date-range": "Date Range",
+  "day": "Day",
+  "degree": "Degree",
+  "department": "Department",
   "details": "",
   "display": "Display",
   "display-mode": "Display Mode",
   "display-mode-description": "Select the display mode of the extension",
+  "doi": "DOI",
   "doi-copied": "Copied",
   "doi-incorrect": "The DOI is incorrect in your source",
   "doi-incorrect-extracted": "The DOI was extracted incorrectly",
@@ -52,6 +66,7 @@
   "doi-not-activated": "The DOI has not been activated yet",
   "doi-not-found": "The DOI was not found. Possible reasons are:",
   "download-report-pdf": "Download report as PDF",
+  "edition": "Edition",
   "english": "English",
   "enter-dois": "Please enter DOIs, a text containing DOIs, or import a PDF containing DOIs to validate them",
   "enter-references": "Please enter a text or import a PDF containing references to verify them",
@@ -74,16 +89,23 @@
   "gpt-4o-description": "Fast, intelligent, flexible GPT model",
   "help": "Help",
   "help-description": "Get support and helpful resources",
+  "hide-additional-fields": "Hide additional fields",
+  "hide-date-details": "Hide date details",
   "hide-details": "Hide details",
   "hr": "hr",
   "idle-state-text": "You have not entered any input yet or have not started the verification. Please enter text or upload a PDF file and click on 'Verify'",
   "idle-state-title": "Input or verification pending",
   "import-pdf-or-add-references": "Upload a PDF file or paste references into the text field to start verification.",
+  "in-press": "In Press",
+  "in-press-indicator": "in press",
   "input-required": "Input required",
   "insert-references": "Insert text with references...",
+  "institution": "Institution",
   "invalid": "Invalid",
   "invalid-description": "Invalid. Please check the DOI for accuracy",
   "issue": "Issue",
+  "issue-match": "Issue Match",
+  "issue-prefix": "Issue Prefix",
   "journal": "Journal",
   "journal-match": "Journal Match",
   "language": "Language",
@@ -91,6 +113,7 @@
   "language-option-description": "Select the language of the extension",
   "learn-more": "Learn more",
   "light": "Light",
+  "location": "Location",
   "match-analysis": "",
   "match-details": "Match Details",
   "match-score": "Match Score",
@@ -98,9 +121,13 @@
   "match-status-missing": "",
   "match-status-no_match": "",
   "match-status-partial": "",
+  "medium": "Medium",
   "metadata": "Metadata",
   "min": "min",
+  "month": "Month",
   "no-additional-error-info": "No additional error information available",
+  "no-date": "No Date",
+  "no-date-indicator": "n.d.",
   "no-input-provided": "No Input Provided",
   "no-matching-source-found": " No matching source found or verification failed",
   "no-references-detected": "No references detected",
@@ -115,12 +142,19 @@
   "note": "Note",
   "o3-mini-description": "Fast, flexible, intelligent reasoning model",
   "open-source": "Open Source",
+  "original-language": "Original Language",
   "original-text": "Original text",
+  "original-title": "Original Title",
   "overall-match": "Overall Match",
+  "page-type": "Page Type",
   "pages": "Pages",
+  "pages-match": "Pages Match",
+  "paragraph-number": "Paragraph Number",
   "pdf-file": "PDF File",
   "pending-reference": "Pending verification. Please wait for the verification to complete.",
   "popup": "Popup",
+  "publication-place": "Publication Place",
+  "publisher": "Publisher",
   "recommended": "Recommended",
   "reference-metadata": "Reference Metadata",
   "registered": "Registered",
@@ -132,6 +166,7 @@
   "requests-per-minute": "Requests per minute",
   "requests-per-minute-description": "This is the limit of AI requests per minute",
   "resets-in": "Resets in approximately",
+  "retrieval-date": "Retrieval Date",
   "search": "Search",
   "search-and-verification": "Search and verification",
   "search-and-verify": "Search and Verify",
@@ -139,14 +174,23 @@
   "search-on-web": "Search the internet for this reference",
   "search-on-web-tooltip": "",
   "search-references": "Search references",
+  "season": "Season",
   "sec": "sec",
+  "series": "Series",
+  "series-number": "Series Number",
+  "show-additional-fields": "Show additional fields",
+  "show-date-details": "Show date details",
   "show-details": "Show Details",
   "side-panel": "Side Panel",
   "source": "Source",
   "source-code": "Source Code",
   "source-metadata": "Source Metadata",
+  "source-type": "Source Type",
+  "source-url": "Source URL",
   "sources-found": "",
   "sth-went-wrong": "Something went wrong",
+  "subtitle": "Subtitle",
+  "supplement-info": "Supplement Info",
   "system": "System",
   "test-api-key": "Test API Key",
   "theme": "Theme",
@@ -174,10 +218,10 @@
   "view-github": "View Project on GitHub",
   "visit-website": "Visit Website",
   "volume": "Volume",
+  "volume-match": "Volume Match",
+  "volume-prefix": "Volume Prefix",
   "website": "Website",
   "year": "Year",
   "year-match": "Year Match",
-  "volume-match": "Volume Match",
-  "issue-match": "Issue Match",
-  "pages-match": "Pages Match"
+  "year-suffix": "Year Suffix"
 }
