--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1,6 +1,7 @@
 {
   "about": "Über uns",
   "about-description": "Erfahre mehr über die Extension",
+  "advisor": "Betreuer",
   "ai": "KI",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-extraction": "KI-Extraktion",
@@ -20,6 +21,9 @@
   "api-key-valid": "Gültig",
   "appearance": "Aussehen",
   "appearance-description": "Passe das Erscheinungsbild der Extension an",
+  "approximate-date": "Ungefähres Datum",
+  "approximate-date-indicator": "ca.",
+  "article-number": "Artikelnummer",
   "authors": "Autoren",
   "authors-match": "Autoren-Übereinstimmung",
   "auto-check-references-description": "Referenzen werden automatisch extrahiert und geprüft, sobald Text eingefügt oder eine PDF importiert wird",
@@ -31,20 +35,30 @@
   "best-match": "Beste Übereinstimmung",
   "best-match-from": "Beste Übereinstimmung von",
   "browse": "Durchsuchen",
+  "chapter-title": "Kapiteltitel",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "check-references": "Referenzen prüfen",
   "checked": "überprüft",
+  "conference": "Konferenz",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
   "contact": "Kontakt",
   "contact-email": "Bei Fragen oder Problemen erreichst du uns per E-Mail",
+  "containerTitle": "Erscheinungsort",
+  "containerTitle-match": "Erscheinungsort-Übereinstimmung",
+  "contributors": "Mitwirkende",
   "copy": "Kopieren",
   "copy-reference": "Referenz kopieren",
   "create-one-here": "hier erstellen",
   "dark": "Dunkel",
+  "date-range": "Datumsbereich",
+  "day": "Tag",
+  "degree": "Abschluss",
+  "department": "Abteilung",
   "details": "Details",
   "display": "Darstellung",
   "display-mode": "Anzeigemodus",
   "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
+  "doi": "DOI",
   "doi-copied": "Kopiert",
   "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
   "doi-incorrect-extracted": "Der DOI wurde falsch extrahiert",
@@ -52,6 +66,7 @@
   "doi-not-activated": "Der DOI wurde noch nicht aktiviert",
   "doi-not-found": "Der DOI wurde nicht gefunden. Mögliche Gründe sind:",
   "download-report-pdf": "Bericht als PDF herunterladen",
+  "edition": "Auflage",
   "english": "Englisch",
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
   "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
@@ -74,16 +89,23 @@
   "gpt-4o-description": "Schnelles, intelligentes, flexibles GPT-Modell",
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
+  "hide-additional-fields": "Zusätzliche Felder ausblenden",
+  "hide-date-details": "Datumsdetails ausblenden",
   "hide-details": "Details ausblenden",
   "hr": "h",
   "idle-state-text": "Sie haben noch keine Eingabe gemacht oder die Überprüfung noch nicht gestartet. Bitte geben Sie einen Text ein oder laden Sie eine PDF-Datei hoch und klicken Sie auf 'Überprüfen'",
   "idle-state-title": "Eingabe oder Überprüfung ausstehend",
   "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
+  "in-press": "Im Druck",
+  "in-press-indicator": "im Druck",
   "input-required": "Eingabe erforderlich",
   "insert-references": "Text mit Referenzen eingeben...",
+  "institution": "Institution",
   "invalid": "Ungültig",
   "invalid-description": "Ungültig. Bitte überprüfen Sie den DOI auf Richtigkeit",
   "issue": "Ausgabe",
+  "issue-match": "Ausgabe-Übereinstimmung",
+  "issue-prefix": "Ausgabe-Präfix",
   "journal": "Zeitschrift",
   "journal-match": "Journal-Übereinstimmung",
   "language": "Sprache",
@@ -91,6 +113,7 @@
   "language-option-description": "Wählen Sie die Sprache der Erweiterung",
   "learn-more": "Mehr erfahren",
   "light": "Hell",
+  "location": "Ort",
   "match-analysis": "Übereinstimmungsanalyse",
   "match-details": "Übereinstimmungsdetails",
   "match-score": "Übereinstimmungswert",
@@ -98,9 +121,13 @@
   "match-status-missing": "Fehlend",
   "match-status-no_match": "Keine Übereinstimmung",
   "match-status-partial": "Teilweise",
+  "medium": "Medium",
   "metadata": "Metadaten",
   "min": "min",
+  "month": "Monat",
   "no-additional-error-info": "Keine zusätzlichen Fehlerinformationen verfügbar",
+  "no-date": "Kein Datum",
+  "no-date-indicator": "o.J.",
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "no-matching-source-found": "Keine passende Quelle gefunden oder Überprüfung fehlgeschlagen",
   "no-references-detected": "Keine Referenzen erkannt",
@@ -115,12 +142,19 @@
   "note": "Hinweis",
   "o3-mini-description": "Schnelles, flexibles, intelligentes Denkmodell",
   "open-source": "Quelle öffnen",
+  "original-language": "Originalsprache",
   "original-text": "Originaltext",
+  "original-title": "Originaltitel",
   "overall-match": "Gesamtübereinstimmung",
+  "page-type": "Seitentyp",
   "pages": "Seiten",
+  "pages-match": "Seiten-Übereinstimmung",
+  "paragraph-number": "Absatznummer",
   "pdf-file": "PDF-Datei",
   "pending-reference": "Ausstehende Überprüfung. Bitte warten Sie, bis die Überprüfung abgeschlossen ist.",
   "popup": "Popup",
+  "publication-place": "Publikationsort",
+  "publisher": "Verlag",
   "recommended": "Empfohlen",
   "reference-metadata": "Referenz-Metadaten",
   "registered": "Registriert",
@@ -132,6 +166,7 @@
   "requests-per-minute": "Anfragen pro Minute",
   "requests-per-minute-description": "Dies ist das Limit der KI-Anfragen pro Minute",
   "resets-in": "Wird zurückgesetzt in ca.",
+  "retrieval-date": "Abrufdatum",
   "search": "Suche",
   "search-and-verification": "Suche und Überprüfung",
   "search-and-verify": "Suche und Überprüfung",
@@ -139,14 +174,23 @@
   "search-on-web": "Im Internet nach dieser Referenz suchen",
   "search-on-web-tooltip": "Im Internet nach dieser Referenz suchen",
   "search-references": "Referenzen suchen",
+  "season": "Jahreszeit",
   "sec": "s",
+  "series": "Serie",
+  "series-number": "Seriennummer",
+  "show-additional-fields": "Zusätzliche Felder anzeigen",
+  "show-date-details": "Datumsdetails anzeigen",
   "show-details": "Details anzeigen",
   "side-panel": "Seitenleiste",
   "source": "Quelle",
   "source-code": "Quellcode",
   "source-metadata": "Quellen-Metadaten",
+  "source-type": "Quellentyp",
+  "source-url": "Quellen-URL",
   "sources-found": "Quellen gefunden",
   "sth-went-wrong": "Etwas ist schief gelaufen",
+  "subtitle": "Untertitel",
+  "supplement-info": "Beilageninformation",
   "system": "System",
   "test-api-key": "API-Schlüssel testen",
   "theme": "Design",
@@ -174,10 +218,10 @@
   "view-github": "Projekt auf GitHub ansehen",
   "visit-website": "Webseite besuchen",
   "volume": "Band",
+  "volume-match": "Band-Übereinstimmung",
+  "volume-prefix": "Band-Präfix",
   "website": "Webseite",
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
-  "volume-match": "Band-Übereinstimmung",
-  "issue-match": "Ausgabe-Übereinstimmung",
-  "pages-match": "Seiten-Übereinstimmung"
+  "year-suffix": "Jahr-Suffix"
 }
