--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -38,6 +38,7 @@
   "chapter-title": "Kapiteltitel",
   "check-dois": "Bitte überprüfen Sie Ihre Eingabe und stellen Sie sicher, dass diese DOIs enthält und korrekt formatiert ist, um die Suchergebnisse zu verbessern",
   "check-references": "Referenzen prüfen",
+  "check-references-shortcut": "Referenzen prüfen (Cmd+Enter / Strg+Enter)",
   "checked": "überprüft",
   "conference": "Konferenz",
   "connection-problem": "Es könnte ein Problem mit Ihrer Verbindung geben. Bitte überprüfen Sie Ihre Internetverbindung.",
